# HapSight

./: .coverage  .gitignore  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: CI.yaml
docs/: conf.py  hapsight.rst  index.rst  notebooks.rst
hapsight/: countrieswidget.py  main_nicegui.py  main_qt.py  mainwindow.py  mapwidget.py  paolo_stats_widget.py  stats_widget.py  statswidget.py
test_hapsight/: basic_test.py
